--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>すごいアプリ</title>
+  <title>Fake Baite</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-	<header>Sakakima Takumi portfolio　<a href="">ABOUT</a>・<a href="#features">WORKS</a>・<a href="#footer">CONTACT</a>　</header>
-  <main>
-    <img id="main">
-
-    <nav>
-      <ul>
-        <li id="play">Play</li>
-        <li id="prev">&lt;</li>
-        <li id="next">&gt;</li>
-      </ul>
-    </nav>
-
-    <ul class="thumbnails"></ul>
-  </main>
+	<header>　<img src="img/title.jpg" alt=""><div class="globalmenu"><a href="">ABOUT</a><a href="#features">WORKS</a><a href="#footer">CONTACT</a>　</div></header>
+	
+<div class="topview"><img src="img/pic00.png" alt=""></div>
+  
 
   <section class="features">
     <a name="features"></a><h1>Works</h1>
@@ -29,7 +19,7 @@
     <div class="container">
       <section>
         <div class="pic">
-			<a href=" "><img src="img/pic01.png"></a>
+			<a href="work.html"><img src="img/left.png"></a>
         </div>
         <div class="info">
           <h1>作品名</h1>
@@ -39,7 +29,7 @@
 
       <section>
         <div class="pic">
-          <a href=" "><img src="img/pic02.png"></a>
+          <a href="work.html"><img src="img/2.png"></a>
         </div>
         <div class="info">
           <h1>作品名</h1>
@@ -49,7 +39,7 @@
       
       <section>
         <div class="pic">
-          <a href=" "><img src="img/pic03.png"></a>
+          <a href="work.html"><img src="img/3.png"></a>
         </div>
         <div class="info">
           <h1>作品名</h1>
@@ -60,8 +50,18 @@
     </div>
   </section>
 
+  <section class="lake">
+	  <div class="lake_l"><img src="img/hito.png" alt=""></div>
+	  <div class="lake_r"><img src="img/landscape-lake-silhouette-vector-8511748.png" alt=""></div>
+	</section>
+	
   <section class="members">
-    <h1>メンバー紹介</h1>
+	  
+	<section class="lake_gyaku">
+		<div class="lake_l"><img src="img/hito_gyaku.png" alt=""></div>
+		<div class="lake_r"><img src="img/lake_gyaku.png" alt=""></div>
+	  </section>
+    <h1>Profile</h1>
 
     <ul>
       <li>
@@ -72,11 +72,12 @@
     </ul>
   </section>
 
-  
 
   <footer><a name="footer"></a>
     <a href="">メール</a>　/　<a href="">Twitter</a>
   </footer>
-	<script src="js/main.js"></script>
+	
+	
+
 </body>
 </html>
